--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ index.css
 body{
     font-family: 'Open Sans', sans-serif !important;
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 75px);
     background-color: white;
     margin: 0 auto;
     font-size: 1rem !important;
